--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
                 <!---->
                 <div class="form-group" id="text">
                     <label for="formGroup">Seach cryptocurrency:</label>
-                    <input type="text" class="form-control" id="formInput" placeholder="Cryptocurrency">
-                    <input  type="submit" value="Go!" />
-
+                    <input type="text" class="form-control" id="formGroup" placeholder="Cryptocurrency">
+                    <input type="submit" value="Go!" class="form-control" id="formGroup"/>
                 </div>
                 <!---->
                 <div class="col-xs-12" role="main" id="data">
