--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                 <div><button type="button" id="Button" class="form-group" onclick="acceptValues()">Request</button></div>
                 <!---->
                 <div role="main" id="data">
-                    <p><strong>Coin: <span id="coin"></span></strong></p>
-                    <p><strong>Currency: <span id="vs-currency"></span></strong></p>
-                    <p><strong>Value: <span id="value"></span></strong></p>
+                    <p><h4><strong>Coin: </strong><span id="coin"></span></h4></p>
+                    <p><h4><strong>Currency: </strong><span id="vs-currency"></span></h4></p>
+                    <p><h4><strong>Price: </strong><span id="value"></span></h4></p>
                     <img src="" alt="" />
                 </div>
             </div>            
