--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
                     <select name="vsCurrency" class="form-control" id="currencies-list">                        
                     </select>                                      
                 </div>
-                <div><button type="button" id="Button" class="form-group" onclick="acceptValues()">Request</button></div>
+                <div>
+                    <button type="button" id="Button" class="form-group" onclick="acceptValues()">Request</button>
+                </div>
                 <!---->
                 <div role="main" id="data">
                     <p><h4><strong>Coin: </strong><span id="coin"></span></h4></p>
@@ -57,7 +59,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 
 <!-- Latest compiled JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 </body>
 </html>
