--- a/index.html
+++ b/index.html
@@ -23,33 +23,30 @@
 </head>
 <body>
     <!---->
-    <div class="container-fluid" id="bg">
+    <div class="container-fluid">
         <!---->
         <div class="row" id="row">
-            <div class="col-xs-12">
+            <div>
                 <!---->
                 <div role="banner"><h1><strong>Crypto Watch</strong></h1></div>
                 <!---->
                 <div class="form-group" id="text">
-                    <label for="coins-list">Select cryptocurrency via id:</label>
+                    <label for="coins-list">Select cryptocurrency:</label>
                     <select name="coins" class="form-control" id="coins-list"></select>
                     <label for="currencies-list">Select currency:</label>
-                    <select name="vsCurrency" class="form-control" id="currencies-list">                        
-                    </select>                                      
+                    <select name="vsCurrency" class="form-control" id="currencies-list"></select>                                      
+                    <button type="button" id="Button" onclick="acceptValues()">Request</button>
                 </div>
-                <div>
-                    <button type="button" id="Button" class="form-group" onclick="acceptValues()">Request</button>
+                <!---->  
+                <div role="main" class="dataDisplay">
+                    <p><h4><strong>Coin: <span id="coin"></span></strong></h4></p>
+                    <p><h4><strong>Currency: <span id="vs-currency"></span></strong></h4></p>             
+                    <p><h4><strong>Price: <span id="value"></span></strong></h4></p>
                 </div>
-                <!---->
-                <div role="main" id="data" class="">
-                    <p><h4><strong>Coin: </strong><span id="coin"></span></h4></p>
-                    <p><h4><strong>Currency: </strong><span id="vs-currency"></span></h4></p>
-                    <p><h4><strong>Price: </strong><span id="value"></span></h4></p>                    
-                </div>
-                <div>
-                    <canvas id="myChart"></canvas>
-                </div> 
-            </div>            
+            </div>        
+        </div>
+        <div class="row">
+            <canvas id="myChart"></canvas>
         </div>
     </div>   
 
