--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <!---->
                 <div role="banner"><h1><strong>Crypto Watch</strong></h1></div>
                 <!---->
-                <div class="form-group" id="text">
+                <div class="form-group">
                     <label for="coins-list">Select cryptocurrency:</label>
                     <select name="coins" class="form-control" id="coins-list"></select>
                     <label for="currencies-list">Select currency:</label>
