--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<!--
     Author: Patrick
-    A web page for search cryptocurrency pricesS
+    A web page for search cryptocurrency prices
 -->
 <!DOCTYPE html>
 
@@ -25,7 +25,7 @@
     <!---->
     <div class="container-fluid">
         <!---->
-        <div class="row" id="row">
+        <div class="row">
             <div>
                 <!---->
                 <div role="banner"><h1><strong>Crypto Watch</strong></h1></div>
@@ -55,9 +55,6 @@
 
 <!-- Chart JS-->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 <!-- Popper JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
