--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <!---->
-    <div class="container-fluid">
+    <div class="container">
         <!---->
         <div class="row">
             <div>
@@ -33,8 +33,8 @@
                 <div class="form-group">
                     <label for="coins-list">Select cryptocurrency:</label>
                     <select name="coins" class="form-control" id="coins-list"></select>
-                    <label for="currencies-list">Select currency:</label>
-                    <select name="vsCurrency" class="form-control" id="currencies-list"></select>                                      
+                    <label for="currency-list">Select currency:</label>
+                    <select name="vsCurrency" class="form-control" id="currency-list"></select>                                      
                     <button type="button" id="Button" onclick="acceptValues()">Request</button>
                 </div>
                 <!---->  
