--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
 <!-- Chart JS-->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
+<!-- JQuery-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 <!-- Popper JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 
